test/Constraints/rdar107420031.code
// RUN: %target-typecheck-verify-language

enum E {
  case e
}

fn ~= (lhs: any Error, rhs: E) -> Bool { true }

// rdar://107420031 – Make sure we don't crash.
// TODO: This ought to compile.
fn foo(_ error: any Error) {
  switch error {
  case E.e: // expected-error {{pattern of type 'E' cannot match 'any Error'}}
    break
  default:
    break
  }
}
